tests/ui/try-trait/issue-32709.stderr
error[E0277]: the `?` operator can only be used on `Result`s in a function that returns `Result`
  --> $DIR/issue-32709.rs:4:11
   |
LL | fn a() -> Result<i32, ()> {
   | ------------------------- this function returns a `Result`
LL |     Err(5)?;
   |           ^ this `?` produces `Result<Infallible, {integer}>`, which is incompatible with `Result<i32, ()>`
   |
   = help: the trait `FromResidual<Result<Infallible, {integer}>>` is not implemented for `Result<i32, ()>`, which is required by `Result<i32, ()>: FromResidual<Result<Infallible, {integer}>>`
   = help: the following other types implement trait `FromResidual<R>`:
             <Result<T, F> as FromResidual<Yeet<E>>>
             <Result<T, F> as FromResidual<Result<Infallible, E>>>
   = note: required for `Result<i32, ()>` to implement `FromResidual<Result<Infallible, {integer}>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
